# blossomfs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  llms.txt
.github/workflows/: ci.yml  release.yml
.omo/plans/: cashu-paid-storage.md  directory-persistence.md
contrib/: blossomfs.toml.example  blossomfs@.service  fstab-example  mount-blossomfs.sh
docs/: CACHING.md  append-only-drive-spec-draft.md  ci-cashu-demo.md  design.md  research-validation.md
examples/: manifest.json
scripts/: ci_nip34_test.sh  ci_test.sh  ci_tollgate_test.sh
src/: cli.rs  config.rs  control.rs  main.rs  metrics.rs
src/blossom/: auth.rs  client.rs  descriptor.rs  manifest.rs  mod.rs
src/cache/: fetch.rs  mod.rs  object_cache.rs
src/fuse/: fs.rs  inode.rs  mod.rs  tree.rs  vfiles.rs
src/git/: browse.rs
src/nostr/: auth.rs  discovery.rs  keys.rs  legacy_drive.rs  mod.rs  nip34.rs  nip94.rs  persist.rs  tollgate.rs
src/payment/: cbor.rs  mod.rs  nwc.rs  token.rs
src/util/: mime.rs  mod.rs  path.rs
tests/: integration_real_server.rs
