[package]
name = "blossomfs"
version = "0.1.0"
edition = "2024"
description = "FUSE filesystem for Blossom/Nostr blob storage with read-write support"
license = "MIT"
repository = "https://github.com/Amperstrand/blossomfs"
keywords = ["fuse", "blossom", "nostr", "filesystem", "storage"]
categories = ["filesystem", "network-programming"]

[dependencies]
# FUSE filesystem
fuser = "0.17"

# Nostr ecosystem
nostr-sdk = "0.45.0-alpha.1"

# HTTP client (for BUD-12 pagination and streaming blob fetch)
reqwest = { version = "0.13", features = ["stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing and encoding
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MIME type handling
mime_guess = "2"

[dev-dependencies]
reqwest = "0.13"
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
