[package]
name = "blossomfs"
version = "0.1.0"
edition = "2024"
description = "FUSE filesystem for Blossom/Nostr blob storage with read-write support"
license = "MIT"
repository = "https://github.com/Amperstrand/blossomfs"
keywords = ["fuse", "blossom", "nostr", "filesystem", "storage"]
categories = ["filesystem", "network-programming"]

[dependencies]
# FUSE filesystem
fuser = "0.17"

# Nostr ecosystem
nostr-sdk = "0.45.0-alpha.1"

# HTTP client (for BUD-12 pagination and streaming blob fetch)
reqwest = { version = "0.13", features = ["stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing and encoding
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MIME type handling
mime_guess = "2"

# HTTP date parsing (RFC 8594 Sunset header)
httpdate = "1"

# TLS provider for nostr-sdk WebSocket connections (rustls 0.23 requires explicit provider)
rustls = { version = "0.23", features = ["ring"] }

# Config file parsing (figment for hierarchical config: CLI > env > file)
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# Daemon mode (fork to background)
daemonize = "0.5"

# HTTP retry with exponential backoff
backon = "1"

# Atomic file writes (NamedTempFile::persist)
tempfile = "3"

# systemd notification (READY/STOPPING signals)
sd-notify = "0.5"

# Native git operations (no external git binary needed)
git2 = "0.19"

# Robust directory traversal
walkdir = "2"

[dev-dependencies]
reqwest = "0.13"
wiremock = "0.6"
tokio = { version = "1", features = ["test-util", "full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
